fix: update menu toggle to body overflow when active so background doesn't scroll, update short screens for menu to scroll to see all menu items

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14314,6 +14314,8 @@ $img-width-sm: 18.5rem;     //296px*/
 
 #context-menu {
   z-index: 3;
+  position: fixed;
+  overflow: auto;
 }
 
 .top-navigation .menu {
