--- a/assets/sass/app-specific/_easy-cite.scss
+++ b/assets/sass/app-specific/_easy-cite.scss
@@ -17,6 +17,8 @@ html.nav-fixed {
 
 #context-menu {
   z-index: 3;
+  position: fixed;
+  overflow: auto;
 }
 
 //hide hamburger from large screen sizes
